--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.2",
     "element-plus": "^2.4.3",
     "pinia": "^2.1.7",
@@ -21,6 +22,7 @@
     "sass-loader": "^13.3.2",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.17.2",
+    "unplugin-icons": "^0.18.1",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.0",
     "vue-tsc": "^1.8.22"
